--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
 </head>
 
 <body>
-  <article class="card">
-    <div class="card-top-container">
-      <figure class="card-img">
-        <img src="./images/icon-sedans.svg" alt="icon-" class="img">
+  <main class="">
+    <article class="card-left">
+      <div class="card-top-container">
+        <figure class="card-img">
+          <img src="./images/icon-sedans.svg" alt="icon-" class="img">
+        </figure>
         <h1 class="title">Sedans</h1>
         <p class="card-top-content">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising
           in the city
           or on your next road trip.</p>
-    </div>
-    <div class="card-bottom-container">
-      <button class="btn">learn more</button>
-    </div>
-
-    </figure>
-  </article>
+      </div>
+      <div class="card-bottom-container">
+        <button class="btn">learn more</button>
+      </div>
+    </article>
+  </main>
 </body>
 
 </html>
