--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
   <!-- custom css file -->
-  <link rel="stylesheet" href="./styles/sytyle.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Frontend Mentor | 3-column preview card component</title>
 </head>
 
 <body>
-  <main class="">
-    <article class="card-left">
+  <main class="main-card">
+    <article class="card card-left">
       <div class="card-top-container">
         <figure class="card-img">
           <img src="./images/icon-sedans.svg" alt="icon-" class="img">
@@ -23,6 +23,37 @@
         <p class="card-top-content">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising
           in the city
           or on your next road trip.</p>
+      </div>
+      <div class="card-bottom-container">
+        <button class="btn">learn more</button>
+      </div>
+    </article>
+
+    <article class="card card-center">
+      <div class="card-top-container">
+        <figure class="card-img">
+          <img src="./images/icon-suvs.svg" alt="icon-" class="img">
+        </figure>
+        <h1 class="title">SUVs</h1>
+        <p class="card-top-content">Take an SUV for its spacious interior, power, and versatility. Perfect for your next
+          family vacation
+          and off-road adventures.
+        </p>
+      </div>
+      <div class="card-bottom-container">
+        <button class="btn">learn more</button>
+      </div>
+    </article>
+
+    <article class="card card-right ">
+      <div class="card-top-container">
+        <figure class="card-img">
+          <img src="./images/icon-luxury.svg" alt="icon-" class="img">
+        </figure>
+        <h1 class="title">Luxury</h1>
+        <p class="card-top-content">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort
+          of a luxury
+          rental and arrive in style.</p>
       </div>
       <div class="card-bottom-container">
         <button class="btn">learn more</button>
