--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <main class="main-card">
+    <!-- card left -->
     <article class="card card-left">
       <div class="card-top-container">
         <figure class="card-img">
@@ -28,7 +29,7 @@
         <button class="btn">learn more</button>
       </div>
     </article>
-
+    <!-- card center -->
     <article class="card card-center">
       <div class="card-top-container">
         <figure class="card-img">
@@ -44,7 +45,7 @@
         <button class="btn">learn more</button>
       </div>
     </article>
-
+    <!-- card right -->
     <article class="card card-right ">
       <div class="card-top-container">
         <figure class="card-img">
